--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,7 @@
  *= require bootstrap
  *= require bootstrap_and_overrides
  *= require custom.css
+ *= require changes
  *= require formtastic-bootstrap
  */
+
