--- a/app/assets/stylesheets/changes.css.scss
+++ b/app/assets/stylesheets/changes.css.scss
@@ -8,10 +8,6 @@ html,body {
   height:100%;
 }
 
-.changes-index {
-  height:100%;
-}
-
 .hidden-special {
   display: none;
 }
@@ -63,6 +59,11 @@ body {
 }
 
 .changes-index {
+  height:100%;
   background-color: white;
 }
 
+.edit-jurisdiction {
+  height:100%;
+  background-color: white;
+}
