--- a/app/views/licensed_practices/show.html.haml
+++ b/app/views/licensed_practices/show.html.haml
@@ -21,20 +21,20 @@
           .comment-header
             %p Comments
           .comment-container
-            .comment
-              <span><a href='#'>ASWB Admin</a></span><br />
-              Hey Tom, I don't like this change. It has too many words that make no sense. Where did you even get this crazy text? Oh no, I've been infected too!
-
-              Mauris bibendum eu quam quis porttitor. Donec quis dignissim turpis, sit amet aliquet arcu. Sed volutpat risus quis congue molestie. Proin lorem tellus, dapibus quis ultrices ut, faucibus a sem. Donec vitae purus feugiat, vehicula lectus sit amet, pellentesque turpis. 
-
-            .comment
-              <span><a href='#'>ASWB User</a></span><br />
-              Mauris bibendum eu quam quis porttitor. Donec quis dignissim turpis, sit amet aliquet arcu. Sed volutpat risus quis congue molestie. Proin lorem tellus, dapibus quis ultrices ut, faucibus a sem. Donec vitae purus feugiat, vehicula lectus sit amet, pellentesque turpis. 
+            - @comments.each do |comment|
+              .comment
+                %span
+                  %a 
+                    = comment.user.email
+                  %br
+                = comment.content
           .comment-form
-            %form
+            = form_for [@req_change, @comment], remote: true do |f|
               .form-group
                 %label
                   %span 
-                    %a{href:'#'} ASWB Admin:
-                %textarea{class: 'form-control comment-text', placeholder: 'Enter your comment...'}
-                %button{type: 'button', class: 'btn btn-primary', onClick: 'appendComment();'} Add Comment
+                    %a 
+                      = current_user.email
+                = f.text_area :content, class: 'form-control comment-text',
+                  placeholder: 'Enter your comment...'
+                = f.submit
