--- a/app/views/jurisdictions/index.html.haml
+++ b/app/views/jurisdictions/index.html.haml
@@ -4,12 +4,16 @@
   - else
     %h2
       = "Pending Changes" + (current_user.admin? ? '' : ' Submitted By You')
-    %h3
+    %h4
       %ul.unstyled
-        %li
-          - @changes.each do |change|
-            = link_to change.jurisdiction.name, change.jurisdiction
-            wants to
-            modify their
+        - @changes.each do |change|
+          %li
+            - if current_user.admin?
+              = link_to change.jurisdiction.name, change.jurisdiction
+              wants to
+              modify their
+            - else
+              You requested a change to the 
             = link_to key_display(change.changed_key), jurisdiction_licensed_practice_path(change.jurisdiction, change.practice_info, changed_key: change.changed_key)
-            requirement
+            requirement for the
+            = "#{change.practice_info.title} practice#{change.comments.empty? ? '' : ' (' + change.comments.count.to_s + ' comment/s)'}."
