Opened up edit page for making changes via web interface Created a run all seeds file Fixed some bugs in load and authorize resource Users now own jurisdictions

--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -29,8 +29,11 @@
 
       %ul.nav.navbar-nav.navbar-right
         - if current_user
+          - if !current_user.admin?
+            %li
+              = link_to "Suggest Edit", url_for([:edit, current_user.jurisdictions.first])
           %li
-            = link_to 'Sign Out', destroy_user_session_path, :method => :delete
+            = link_to "Sign Out (#{current_user.email})", destroy_user_session_path, :method => :delete
         - else
           %li
             = link_to 'Sign In', new_user_session_path
